# xdma_test

./: .gitignore  CMakeLists.txt
cmake/: gui_app.cmake  imgui.cmake  windows_xdma_driver.cmake  xdma_lib.cmake
driver/: CMakeLists.txt  SOURCES.txt
lib/xdma/include/xdma/: xdma_device.h  xdma_info.h
lib/xdma/src/: xdma_device.cpp  xdma_info.cpp
src/: main.cpp  xdma_device.cpp  xdma_device.h
src/app/: app_state.cpp  app_state.h  dma_session.h
src/ui/: dock.cpp  dock.h  fonts.cpp  fonts.h  hex_view.cpp  hex_view.h  panel_auto_test.cpp  panel_device.cpp  panel_dma.cpp  panel_ip_info.cpp  panel_log.cpp  panel_rw.cpp  panel_user.cpp  panels.h  window_titles.h
